--- a/FrontEnd/FZBO/src/components/Header/Header.scss
+++ b/FrontEnd/FZBO/src/components/Header/Header.scss
@@ -1,10 +1,10 @@
 nav {
-  height: 100px !important;
+  height: 5rem !important;
   padding: 0 !important;
-  background: linear-gradient(135deg, #000000, #c0c0c0, #1f3d61);
   position: sticky;
   top: 0;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  background-color: #1C3458;
+  box-shadow: 0 2px 15px rgba(0, 0, 900, 0.3);
   width: 100%;
   z-index: 30;
 }
@@ -20,29 +20,34 @@ nav {
 }
 
 .div-logo {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-size: 2rem;
-  font-weight: bold;
-  color: white;
-  cursor: pointer;
-  transition: transform 0.3s ease;
+  margin-left: 2rem;
 }
 
-.div-logo:hover {
+.div-logo a {
+  color: #0d77fa;
+  display: flex;
+  align-items: center;
+  gap: 1px;
+  font-size: 2rem;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.div-logo a:hover {
+  color: #ffffff;
   transform: scale(1.1);
 }
+
 
 .div-link {
   display: flex;
   gap: 20px;
   align-items: center;
   overflow-x: auto;
+  margin-right: 2rem;
 }
 
 .div-link a {
-  color: white;
+  color: #0d77fa;
   font-size: 1.1rem;
   text-decoration: none;
   display: flex;
@@ -52,18 +57,19 @@ nav {
 }
 
 .div-link a:hover {
-  color: #56759e;
+  color: #ffffff;
 }
 
 .hamburger-menu {
   display: none;
   cursor: pointer;
-  color: white;
+  color: #0d77fa;
   font-size: 2rem;
 }
 
 .hamburger-menu:hover {
-  transform: scale(1.1);
+  transform: scale(1);
+  color: #ffffff;
 }
 
 .side-menu {
@@ -72,7 +78,6 @@ nav {
   right: -250px;
   width: 250px;
   height: 100%;
-  background: linear-gradient(135deg, #000000, #c0c0c0, #1f3d61);
   transition: right 0.3s ease;
   padding-top: 60px;
   z-index: 20;
@@ -96,22 +101,21 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: #0d77fa;
   padding: 0;
   height: 50px;
   width: 100%;
   text-decoration: none;
   font-size: 1.2rem;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(30, 55, 100, 1);
   border-radius: 8px;
   transition: background-color 0.3s ease, transform 0.3s ease;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 5px rgba(0, 0, 100, .3);
 }
 
 .side-menu a:hover {
-  background-color: rgba(255, 255, 255, 0.2);
   transform: translateX(10px);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px rgb(255, 255, 255, 0.8);
 }
 
 .menu-close {
@@ -119,12 +123,13 @@ nav {
   top: 20px;
   right: 20px;
   font-size: 2rem;
-  color: white;
+  color: #0d77fa;
   cursor: pointer;
 }
 
 .menu-close:hover {
   transform: scale(1.2);
+  color: #ffffff;
 }
 
 @media only screen and (max-width: 768px) {
