--- a/FrontEnd/FZBO/src/components/SignInPage/SignIn.scss
+++ b/FrontEnd/FZBO/src/components/SignInPage/SignIn.scss
@@ -65,7 +65,7 @@ input.error {
 }
 
 .google-btn {
-  background-color: #1C3458;
+  background-color: #000;
   margin-top: 16px;
   display: flex;
   align-items: center;
